--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,4 +1,99 @@
-.little-logo {
-    width: 130px;
-    height: 125px;
+.mobile-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: fixed;
+    width: 100vw;
+    height: 10vh;
+    background-color: white;
+}
+
+.header-logo11 {
+    height: 50px;
+}
+
+.menu-button {
+    border: none;
+    background: none;
+    margin-right: 10px;
+}
+
+.bar {
+    width: 20px;
+    height: 4px;
+    margin: 2px;
+    background-color: rgba(52,73,93,255);
+    border-radius: 2px;
+}
+
+.none {
+    display: none;
+}
+
+@keyframes slide-out {
+    0% {
+      transform: translate(-100%)
+    }
+    100% {
+      transform: translate(0);
+    }
+}
+
+.closed {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    position: fixed;
+    right: -150px;
+    animation-name: slide-out;
+    animation-duration: 0.75s;
+    margin-top: 9vh;
+    width: 150px;
+    border-radius: 5px;
+}
+
+@keyframes slide-in {
+    0% {
+      transform: translate(100%)
+    }
+    100% {
+      transform: translate(0)
+    }
+}
+
+.open {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: white;
+    position: fixed;
+    right: 0px;
+    animation-name: slide-in;
+    animation-duration: 0.75s;
+    margin-top: 9vh;
+    width: 150px;
+    border-radius: 5px;
+}
+
+.links {
+    color: rgba(52,73,93,255);
+    text-decoration: none;
+    margin: 8px 0px;
+}
+
+.links > h2 {
+    margin: 0px;
+}
+
+.links:visited {
+    color: rgba(52,73,93,255);
+}
+
+.gallery-link {
+    margin-top: 15px;
+}
+
+.logout-link {
+    margin-bottom: 15px;
 }
