--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -29,7 +29,7 @@
 
 .top-section {
     height: 80vh;
-    background: url(https://i.pinimg.com/originals/cb/92/7c/cb927c6d6a602454ff1f3e7991cde0c3.jpg) no-repeat center center fixed;
+    background-color: rgba(240,240,240,255);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -37,7 +37,7 @@
 
 .white-box {
     width: 85vw;
-    height: 92%;
+    height: 94%;
     background-color: white;
     margin-top: 15px;
     border-radius: 5px;
@@ -57,6 +57,12 @@
     color: rgba(52,73,93,255)
 }
 
+.text3 {
+    color: rgba(52,73,93,255);
+    margin-bottom: 0px;
+    font-size: 20px;
+}
+
 .inputs {
     height: 40px;
     width: 130px;
@@ -65,7 +71,8 @@
 }
 
 .create-button {
-    margin: 5px;
+    margin-top: 5px;
+    margin-bottom: 10px;
     width: 150px;
     height: 40px;
     color: white;
@@ -80,6 +87,10 @@
     width: 90vw;
     margin-top: 20px;
     border-radius: 5px;;
+}
+
+.bottom-section {
+    padding-bottom: 15px;
 }
 
 @media (min-width: 359px) {
