--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -13,7 +13,8 @@
 }
 
 .button {
-    margin: 40px;
+    margin-top: 20px;
+    margin-bottom: 80px;
     width: 120px;
     height: 50px;
     color: white;
