--- a/src/components/Profile.css
+++ b/src/components/Profile.css
@@ -1,6 +1,9 @@
 .profile-body {
     background-color: rgba(240,240,240,255);
     padding-top: 12vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .history-videos {
@@ -10,9 +13,31 @@
     margin-bottom: 10px;
 }
 
+.x {
+    margin-right: 10px;
+}
+
+.x-video {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+
+.initials {
+    width: 90px;
+    height: 90px;
+    border: 2px solid rgba(52,73,93,255);
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 35px;
+}
+
 .user-info {
     display: flex;
     justify-content: space-around;
+    margin-top: 25px;
 }
 
 .user-info h2 {
@@ -44,4 +69,86 @@
     position: relative;
     z-index: 1;
     border-radius: 5px;
+}
+
+@media (min-width: 450px) {
+    .history-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .history-videos {
+        width: 300px;
+        margin: 10px;
+    }
+
+    .practice-video-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+
+    .practice-videos {
+        width: 300px;
+    }
+}
+
+@media (min-width: 750px) {
+    .history-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+    }
+
+    .history-videos {
+        width: 350px;
+        margin: 10px;
+    }
+
+    .practice-video-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+
+    .practice-videos {
+        width: 350px;
+        margin: 10px;
+    }
+}
+
+@media (min-width: 1000px) {
+    .history-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .history-videos {
+        width: 400px;
+        margin: 10px;
+    }
+
+    .practice-video-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+        margin-top: 20px;
+    }
+
+    .practice-videos {
+        width: 400px;
+    }
+
+    .info-container {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .initials {
+        margin-right: 100px;
+    }
 }
