--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -13,6 +13,14 @@
     background-color: white;
 }
 
+.desktop-header {
+    display:none;
+}
+
+.desktop-links {
+    display: none;
+}
+
 .header-logo11 {
     height: 50px;
 }
@@ -101,4 +109,59 @@
 
 .logout-link {
     margin-bottom: 15px;
+}
+
+@media (min-width: 1000px) {
+    .mobile-header {
+        display: none;
+    }
+
+    .desktop-header {
+        display: flex;
+        position: fixed;
+        width: 100vw;
+        height: 10vh;
+        justify-content: space-between;
+        align-items: center;
+        background-color: white;
+    }
+
+    .header-logo {
+        height: 50px;
+    }
+
+    .horizontal-menu {
+        display: flex;
+        align-items: center;
+    }
+
+    .desktop-links {
+        display: flex;
+        color: rgba(52,73,93,255);
+        text-decoration: none;
+        margin: 0px 20px;
+    }
+    
+    .desktop-links > h2 {
+        margin: 0px;
+    }
+    
+    .desktop-links:visited {
+        color: rgba(52,73,93,255);
+    }
+
+    .initials-link {
+        width: 50px;
+        height: 50px;
+        border: 2px solid rgba(52,73,93,255);
+        border-radius: 50%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 25px;
+    }
+
+    .logout:hover {
+        cursor: pointer;
+    }
 }
