--- a/src/components/Landing.css
+++ b/src/components/Landing.css
@@ -83,6 +83,10 @@
     border-radius: 5px;
 }
 
+.create-button:hover {
+    box-shadow: 0px 0px 20px lightgray;
+}
+
 .images {
     width: 90vw;
     margin-top: 20px;
